--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -255,7 +255,8 @@
     },
     {
       "type": "image_picker",
-      "id": "main_logo"
+      "id": "main_logo",
+      "label": "Upload logo image"
     },
     {
       "type": "text",
