--- a/snippets/shopify-head.liquid
+++ b/snippets/shopify-head.liquid
@@ -1,4 +1,7 @@
 {{- 'rt.vendors.scss.css' | asset_url | stylesheet_tag -}}
+{{- 'rt.others.scss.css' | asset_url | stylesheet_tag -}}
+{{- 'rt.style.scss.css' | asset_url | stylesheet_tag -}}
+{{- 'rt.menu.scss.css' | asset_url | stylesheet_tag -}}
 {{- 'rt.application.scss.css' | asset_url | stylesheet_tag -}}
 {{- 'rt.custom.scss.css' | asset_url | stylesheet_tag -}}
 {{- 'custom_code.scss.css' | asset_url | stylesheet_tag -}}
